samples/_failures_safe/1761127482_9b24b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bfdb045.c: In function ‘main’:
./samples/SAFE/__tmp_5bfdb045.c:148:9: error: expected declaration or statement at end of input
  148 |         }
      |         ^
./samples/SAFE/__tmp_5bfdb045.c:148:9: error: expected declaration or statement at end of input
